bdr.BDR2.scala.error
Erreur de compilation :
BDR2:6: error: not found: value lettre
  else lettre match {
       ^